# renewal-review

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Dockerfile  Makefile  README.md  convention.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: lint-on-save.sh  log-commit.sh  remind-design-doc.sh  require-design-doc.sh  require-experiment-log.sh  verify-completion.sh
.claude/rules/: conventions.md
.github/ISSUE_TEMPLATE/: tier-complex.yml  tier-manageable.yml  tier-one-shot.yml
.github/workflows/: agent-dispatch.yml  code-review.yml
.hypothesis/constants/: 1ca5177913595c69  28fe9f6501df3247  32bf6815299df6c8  36b4493f18261c96  38a17baf211e4bf1  3e59a8b07ad6b039  3e8ca2ae0bd0983d  3fb7d476381e4ac0  412bd2a3a24cc4bd  4528dd5338667b59  6a15bbe316398889  a8ce03c1cebd6ef0  be9120d3a0bf3063  befc4757c64ce7fb  c6da27fbcef1ff2f  c8bf907dcdce4f1e  (+2 more)
app/: aggregator.py  config.py  data_loader.py  main.py
data/: generate.py
docs/: demo-script.md  design-doc.md  dev-time-estimation.md  experiment-log.md  experiment-plan.md  guide-self-correcting-loop.md  implementation-plan.md  presentation-log.md  renewal-review-plan.md  renewal-review-presentation.md  requirements.md  skill-research-notion.md  skill-research-presentation.md  triangular-verification-experiment.md
docs-kor/: design-doc.md
scripts/: add_quotes_json_column.py  decompose-task.sh  langfuse_datasets.py  langfuse_experiment.py  seed_db.py  self-correcting-loop.sh  triangular-verify.sh
tests/: conftest.py  test_analytics.py  test_batch.py  test_differ.py  test_llm_analyzer.py  test_main.py  test_models.py  test_notes_rules.py  test_parser.py  test_portfolio.py  test_quote_generator.py  test_routes.py  test_rules.py
(+118 files in other folders)
