[project]
name = "renewal-review"
version = "0.1.0"
description = "Insurance renewal review pipeline — rule-based + LLM hybrid"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.1",
    "anthropic>=0.43.0",
    "langfuse>=3.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "hypothesis>=6.120.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
